--- a/index.html
+++ b/index.html
@@ -33,10 +33,87 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block" id="9AM">
+        <div class="hour col-sm-1">9AM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="09"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="10AM">
+        <div class="hour col-sm-1">10AM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="10"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="11AM">
+        <div class="hour col-sm-1">11AM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="11"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="12NOON">
+        <div class="hour col-sm-1">12 Noon</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="12"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="1PM">
+        <div class="hour col-sm-1">1PM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="13"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block"id="2PM">
+        <div class="hour col-sm-1">2PM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="14"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="3PM">
+        <div class="hour col-sm-1">3PM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="15"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+      <div class="row time-block" id="4PM">
+        <div class="hour col-sm-1">4PM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="16"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+
+      <div class="row time-block" id="5PM">
+        <div class="hour col-sm-1">5PM</div>
+        <textarea name="" id="" class="col-sm-10 textarea" data-hour="17"></textarea>
+        <button class="saveBtn btn col-sm-1">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>
+
+
     </div>
 
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/advancedFormat.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
