--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container" id="container">
       <!-- Timeblocks go here -->
       <div class="row time-block" id="9AM">
         <div class="hour col-sm-1">9AM</div>
