--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p id="validBox"></p>
     </header>
     <div class="container" id="container">
       <!-- Timeblocks go here -->
